syntax = "proto3";

import "google/protobuf/any.proto";

option csharp_namespace = "BookingServiceProtoService";
package booking_service_proto_service;

// service definitions
service BookingServiceProtoService{

  // define rpc methods
  rpc FilterBookings(FilterBookingsRequest) returns (FilterBookingsGrpcResponse);
}


// define rpc messages
message FilterBookingsRequest{
  int64 flightId = 1;
  int64 userId = 2;
}


message FilterBookingsGrpcResponse{
  int32 statusCode = 1;
  repeated Booking bookings = 2;
}


message Booking{
  int64 flightId = 1;
  int64 userId = 2;
  int32 ticketCount = 3;
  string bookingDate = 4;
}